packages/diff-ui/src/style.css
/* ... */
[data-pjs] {
  --pjs-code-grid: minmax(min-content, max-content) 1fr;

  [data-column-content] span {
    color: light-dark(var(--pjs-light), var(--pjs-dark));
    font-weight: var(--pjs-light-font-weight);
    font-style: var(--pjs-light-font-style);
  }
}

@media (prefers-color-scheme: dark) {
  [data-pjs-header],
  [data-pjs] {
    color-scheme: dark;
  }

  [data-pjs] [data-column-content] span {
    font-weight: var(--pjs-dark-font-weight);
    font-style: var(--pjs-dark-font-style);
  }
}

[data-pjs-header][data-theme-mode='light'],
[data-pjs][data-theme-mode='light'] {
  color-scheme: light;
}

[data-pjs][data-theme-mode='light'] [data-column-content] span {
  font-weight: var(--pjs-light-font-weight);
  font-style: var(--pjs-light-font-style);
}

[data-pjs-header][data-theme-mode='dark'],
[data-pjs][data-theme-mode='dark'] {
  color-scheme: dark;
}

[data-pjs][data-theme-mode='dark'] [data-column-content] span {
  font-weight: var(--pjs-dark-font-weight);
  font-style: var(--pjs-dark-font-style);
}

[data-type='split'][data-overflow='wrap'] {
  display: grid;
  grid-auto-flow: dense;
  grid-template-columns: repeat(2, var(--pjs-code-grid));
}

[data-type='split'][data-overflow='scroll'] {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 2px;
}

[data-code] {
  display: block;
  display: grid;
  grid-auto-flow: dense;
  grid-template-columns: var(--pjs-code-grid);
  overflow-x: auto;
  scrollbar-width: none;
  overscroll-behavior-x: contain;
  tab-size: var(--pjs-tab-size);
  align-self: flex-start;
  /* TEMP HACK */
  padding-bottom: var(--pjs-gap);
}

[data-type='split'][data-overflow='wrap'] [data-code] {
  display: contents;
}

[data-line-annotation],
[data-line] {
  position: relative;
  display: grid;
  grid-template-columns: subgrid;
  grid-column: 1 / 3;
}

[data-type='split'][data-overflow='wrap'] [data-additions] [data-line] {
  border-left: 2px solid var(--pjs-bg);
}

[data-buffer] {
  position: sticky;
  left: 0;
  grid-column: 1 / 3;
  user-select: none;
  background-image: repeating-linear-gradient(
    -45deg,
    var(--pjs-bg-buffer) 0,
    var(--pjs-bg-buffer) 1px,
    transparent 1px,
    transparent 5px
  );
  min-height: 1lh;
  width: var(--pjs-column-width, auto);
}

[data-separator] {
  grid-column: span 2;
}

[data-separator='metadata'],
[data-separator]:empty {
  min-height: 4px;
  background-color: var(--pjs-bg-buffer);
  display: grid;
  grid-template-columns: subgrid;
}

[data-separator-content] {
  user-select: none;
}

[data-separator='metadata'] [data-separator-content] {
  grid-column: 2 / 3;
  width: var(--pjs-column-content-width);
  position: sticky;
  left: var(--pjs-column-number-width);
  padding: 4px 1ch;
}

[data-separator='line-info'] [data-separator-content] {
  position: sticky;
  display: flex;
  align-items: center;
  gap: 4px;
  padding: 8px 12px;
  border-radius: 6px;
  background-color: var(--pjs-bg-buffer);
  width: auto;
  width: calc(var(--pjs-column-width) - 8px);
}

[data-separator][data-expand-index] {
  cursor: pointer;
}

[data-type='file']
  [data-code]
  [data-separator='line-info']
  [data-separator-content] {
  left: 8px;
  margin-left: 8px;
  margin-right: 8px;
  width: calc(var(--pjs-column-width) - 16px);
}

[data-type='split']
  [data-deletions]
  [data-separator='line-info']
  [data-separator-content] {
  left: 8px;
  margin-left: 8px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

[data-type='split']
  [data-additions]
  [data-separator='line-info']
  [data-separator-content] {
  left: 0;
  margin-right: 8px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  flex-direction: row-reverse;
}

[data-line] {
  background-color: var(--pjs-bg);
  color: var(--pjs-fg);
}

[data-type='split'][data-overflow='wrap'] [data-deletions] {
  [data-line-annotation],
  [data-buffer],
  [data-line],
  [data-separator] {
    grid-column: 1 / 3;
  }
}

[data-line-annotation] {
  min-height: var(--pjs-annotation-min-height);
  background-image: repeating-linear-gradient(
    -45deg,
    var(--pjs-bg-buffer) 0,
    var(--pjs-bg-buffer) 1px,
    transparent 1px,
    transparent 5px
  );
}

[data-type='split'][data-overflow='wrap'] [data-additions] {
  [data-line-annotation],
  [data-buffer],
  [data-line],
  [data-separator] {
    grid-column: 3 / 5;
  }
}

[data-column-content],
[data-column-number] {
  position: relative;
  padding-inline: 1ch;
}

[data-indicators='classic'] [data-column-content] {
  padding-inline-start: 2ch;
}

[data-indicators='classic'] {
  [data-line-type='change-addition'] [data-column-content]::before,
  [data-line-type='change-deletion'] [data-column-content]::before {
    display: inline-block;
    width: 1ch;
    height: 1lh;
    position: absolute;
    top: 0;
    left: 0;
    user-select: none;
  }
}

[data-indicators='classic'] {
  [data-line-type='change-addition'] [data-column-content]::before {
    content: '+';
    color: var(--pjs-addition-base);
  }
  [data-line-type='change-deletion'] [data-column-content]::before {
    content: '-';
    color: var(--pjs-deletion-base);
  }
}

[data-indicators='bars'] {
  [data-line-type='change-deletion'] [data-column-number]::before,
  [data-line-type='change-addition'] [data-column-number]::before {
    content: '';
    display: block;
    width: 0.5ch;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    user-select: none;
  }
}

[data-indicators='bars'] {
  [data-line-type='change-deletion'] [data-column-number]::before {
    background-attachment: fixed;
    background-image: linear-gradient(
      0deg,
      var(--pjs-bg-deletions) 50%,
      var(--pjs-deletion-base) 50%
    );
    background-size: calc(1lh / round(1lh / 2px)) calc(1lh / round(1lh / 2px));
  }
  [data-line-type='change-addition'] [data-column-number]::before {
    background-color: var(--pjs-addition-base);
  }
}
/* ... */

